tests/compile_fail/interface_macro_unsupported_direction.rs
fn main() {
    let _ = rrtl::interface! {
        Bad {
            sink req: uint(1),
        }
    };
}
